# chip-8-toolkit

./: Cargo.toml  README.md  ass.txt  disass.txt  lang.txt  spec.md  test.c8
c8asm/: Cargo.toml  README.md
c8asm/src/: main.rs
c8cc/: Cargo.toml  README.md  lang.txt  test.asm
c8cc/src/: compile.rs  lexer.rs  main.rs  node.rs  parser.rs  token.rs
c8disass/: Cargo.toml  README.md
c8disass/src/: main.rs
c8rs/: Cargo.toml  README.md
c8rs/src/: debug_terminal.rs  instructions.rs  stdin.rs
crates/c8util/: README.md
crates/c8util/src/: register.rs
src/: debug_terminal.rs  decode.rs  execute.rs  init.rs  instructions.rs  lexer.rs  lib.rs  main.rs  register.rs  run.rs  stdin.rs  system.rs
